--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "axios": "^1.6.7",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "twilio": "^4.19.0",
-        "openai": "^4.0.0",
+        "fuse.js": "^7.1.0",
         "ioredis": "^5.3.2",
         "nodemailer": "^6.9.4",
-        "dotenv": "^16.3.1",
-        "axios": "^1.6.7"
+        "openai": "^4.0.0",
+        "twilio": "^4.19.0"
     }
 }
